--- a/less/mixins.less
+++ b/less/mixins.less
@@ -21,6 +21,7 @@
     width: 60%;
     cursor: pointer;
     &:hover {
+        color: red;
         background-color: black;
         font-weight: bold;
     }
