--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,6 +11,8 @@
     padding: 15px 0;
     background-color: @nav-bg;
     border-bottom: 1px solid @nav-border;
+    position: fixed;
+    top: 0;
     a {
         text-decoration: none;
         color: black;
